# Hydra

./: .gitignore  README.md  package.json
Hydra/: package-lock.json
backend/: .gitignore  ENDPOINT_CONFIG.md  QUICKSTART.md  README.md  SWAGGER_TESTING.md  USAGE.md  main.py  pyproject.toml  sampleData.json  tempfile.txt  testConfig.json  test_api_key.py  test_input.json
backend/api/: auth.py  canvas_converter.py  config.py  projects.py  stats.py
backend/core/: __init__.py  config.py  core_agent.py  kb_handler.py  llm_client.py  router.py  system_manager.py  tool_handler.py
backend/core/api/: __init__.py  systems.py
backend/core/tools/: __init__.py  github_tool.py  jira_tool.py
backend/deployment_head/: __init__.py
backend/deployment_head/agent/: __init__.py  deployer_agent.py  prompts.py
backend/deployment_head/mcp_server/: __init__.py  server.py  tool_schemas.py
backend/docs/: GITHUB_INTEGRATION.md  JIRA_INTEGRATION.md
backend/examples/: github_tool_config.json  jira_tool_config.json
backend/hydra_orchestrator/: __init__.py  core.py  nemotron_client.py  state.py  utils.py
backend/hydra_orchestrator/agents/: __init__.py  base_agent.py
backend/monitor_head/: __init__.py
backend/monitor_head/agent/: __init__.py  monitor_agent.py  prompts.py
backend/monitor_head/mcp_server/: __init__.py  server.py  tool_schemas.py
backend/trainer_head/: config.py
backend/trainer_head/agent/: prompts.py  trainer_agent.py
backend/trainer_head/api/: projects.py  routes.py
backend/trainer_head/mcp_server/: __init__.py  server.py  tool_schemas.py
(+37 files in other folders)
